--- a/taxCalc/index.html
+++ b/taxCalc/index.html
@@ -8,6 +8,7 @@
         <!-- JQUERY -->
         <script src="./jquery.min.js"></script>
         <!-- CSS -->
+        <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"/>
         <link rel="stylesheet" href="./style.css">
         <!-- JS -->
         <script src="./scripts.js"></script>
