--- a/memoApp/app.html
+++ b/memoApp/app.html
@@ -40,8 +40,7 @@
             </section>
 
 
-            <section id="memoList" class="mb-10">
-            </section>
+            <section id="memoList" class="mb-10"></section>
             <button id="resetBtn" class="bg-sky-500 text-white rounded px-4 py-2">リセット</button>
 
         </main>
